# RandomnessProperties

./: .gitignore  CMakeLists.txt  README.md  Report.md  StatisticalTest.cpp  StatisticalTest.h  main.cpp
lfsrs/: a5_v1_tb.vhd  output.txt
